public interface Function {
  public DualNumber evaluate(DualNumber dn);
}